--- a/client/index.css
+++ b/client/index.css
@@ -4,18 +4,46 @@ body {
     overflow: hidden;
 }
 
+.container {
+  display: grid;
+  grid-template-areas:
+  'top top top top top top'
+  'left left middle middle right right';
+}
+
+/* ---- Grid layout ---- */
 .top-panel { grid-area: top }
 .left-panel { grid-area: left }
 .middle-panel { grid-area: middle }
 .right-panel { grid-area: right }
 
-.container {
-    display: grid;
-    grid-template-areas:
-    'top top top top top top'
-    'left left middle middle right right';
+.middle-panel {
+  border: .5px solid red;
+}
+.info-panel-middle2 {
+  border: .5px solid green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* height: 100%; */
+  /* width: 100%; */
+}
+.inner-middle-left {
+  /* border: .5px solid yellow; */
+  text-align: center;
+  margin: 50px 150px 0px 0px;
+}
+.inner-middle-right {
+  /* border: .5px solid blue; */
+  text-align: center;
+  margin: 0px 0px 0px 50px;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
+/* ---- Misc ---- */
 p {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -48,6 +76,23 @@ p {
     background-color:#4CAF50!important;
     height: 100px;
     width: 0;
+}
+
+.tpsBarContainer {
+  color:#000!important;
+  border: .5px solid white;
+  position: relative;
+  overflow: hidden;
+  height: 200px;
+  margin-top: 1rem;
+}
+.tps-bar {
+  color:#fff!important;
+  background-color:#4CAF50!important;
+  height: 0%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 .left-panel {
