--- a/client/index.css
+++ b/client/index.css
@@ -1,89 +1,89 @@
 body {
-    background-color: #111A22;
-    color: white;
-    overflow: hidden;
+  background-color: #111A22;
+  color: white;
+  overflow: hidden;
+  font-family: 'myFirstFont', Arial, Helvetica, sans-serif;
 }
-
+/* ---------------------------------------------------------------- */
 .container {
   display: grid;
-  grid-template-areas:
-  'top top top top top top'
-  'left left middle middle right right';
+  grid-template-columns: repeat(3, 1fr);
+  /* grid-gap: 20px; */
+  /* padding: 20px; */
 }
-
-/* ---- Grid layout ---- */
-.top-panel { grid-area: top }
-.left-panel { grid-area: left }
-.middle-panel { grid-area: middle }
-.right-panel { grid-area: right }
-
-/* ---- Middle Bottom Section ---- */
-.middle-panel-bottom {
-  /* border: .5px solid green; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* height: 100%; */
-  /* width: 100%; */
+/* ---------------------------------------------------------------- */
+.top-panel {
+  grid-column: 1 / -1;
+  border-bottom: 0.5px solid yellow;
 }
-.grid-container {
+.rpm-bar {
+  color: #fff!important;
+  background-color: #4CAF50!important;
+  height: 160px;
+  width: 0;
+}
+/* ---------------------------------------------------------------- */
+.left-panel {}
+.right-panel {}
+
+.middle-panel { 
+  /* border: 0.5px solid red; */
+  /* padding: 10px; */
+  margin: 0;
+}
+.middle-panel-top-section {
+  /* border: 0.5px solid yellow; */
+  text-align: center;
+}
+.middle-panel-bottom-section {
+  /* border: 0.5px solid yellow; */
+  text-align: center;
+}
+.test-grid-template {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-.middle-panel-bottom-left {
-  /* border: .5px solid yellow; */
+/* ---------------------------------------------------------------- */
+.info-panel-left {
+  /* border: 0.5px solid pink; */
+  text-align: left;
+  padding: 10px;
+  margin: 0;
+}
+.info-panel-middle-top {
+  /* border: 0.5px solid black; */
   text-align: center;
-  margin: 50px 100px 0px 0px;
+  padding: 10px;
+  margin: 0;
 }
-.middle-panel-bottom-right {
-  /* border: .5px solid blue; */
-  text-align: center;
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 140px;
-  width: 100%;
+.info-panel-middle-bottom-left {
+  /* border: 0.5px solid white; */
+  display: inline-block;
+  margin-right: 20px;
+  /* text-align: center; */
 }
-
-/* ---- Misc ---- */
-p {
-    font-family: Arial, Helvetica, sans-serif;
+.info-panel-middle-bottom-right {
+  /* border: 0.5px solid white; */
+  display: inline-block; 
+  margin-right: 20px; 
+  /* text-align: center; */
 }
-
-.data-title {
-    font-size: 50px;
-    margin: 0;
+.info-panel-right {
+  /* border: 0.5px solid pink; */
+  text-align: right;
+  padding: 10px;
+  margin: 0;
 }
-.data-reading {
-    font-size: 120px;
-    margin: 0;
-}
-.data-reading-gear {
-    font-size: 290px;
-    margin: 0;
-}
-
-.top-panel {
-}
-
-.rpmBarContainer {
-    color:#000!important;
-    /* background-color:#f1f1f1!important; */
-    border-bottom: .5px solid yellow;
-}
-.rpm-bar {
-    color:#fff!important;
-    background-color:#4CAF50!important;
-    height: 160px; /* Was 100px, seems like overall screen size has changed */
-    width: 0;
-}
-
+/* ---------------------------------------------------------------- */
 .tpsBarContainer {
   color: #000!important;
   border: 4px solid yellow;
   position: relative;
   overflow: hidden;
   height: 380px;
-  margin-top: 1rem;
-}
+  margin-top: 5px;
+  /* width: 90%; */
+  }
 .tps-bar {
   color:#fff!important;
   background-color:#4CAF50!important;
@@ -92,30 +92,16 @@ p {
   position: absolute;
   bottom: 0;
 }
-
-.left-panel {
-    /* border: solid 1px white; */
+/* ---------------------------------------------------------------- */
+.data-title {
+  font-size: 40px;
+  margin: 0;
 }
-
-.middle-panel {
-    /* border: solid 1px white; */
+.data-reading {
+  font-size: 130px;
+  margin: 0;
 }
-
-.right-panel {    
-    /* border: solid 1px white; */
-}
-
-.info-panel-left {
-    text-align: left;
-    padding: 10px 20px 0 20px;
-}
-
-.info-panel-middle {
-    text-align: center;
-    padding: 10px 20px 0 20px;
-}
-
-.info-panel-right {
-    text-align: right;
-    padding: 10px 20px 0 20px;
+.data-reading-gear {
+  font-size: 290px;
+  margin: 0;
 }
