--- a/client/index.css
+++ b/client/index.css
@@ -22,8 +22,7 @@ body {
 .rpm-bar {
   color: #fff!important;
   background-color: #4CAF50!important;
-  /* height: 160px;  */
-  height: 130px; 
+  height: 130px; /* 160px pre thousands numbers */
   width: 0;
 }
 
@@ -37,8 +36,7 @@ body {
 .grid-item {
   border-right: .1px solid white;
   box-sizing: border-box;
-  /* height: 170px; */
-  height: 140px;
+  height: 140px; /* 170px pre thousands numbers */
   width: 100%;
   position: relative;
 }
