--- a/client/ShiftLightDisplay/index.css
+++ b/client/ShiftLightDisplay/index.css
@@ -1,4 +1,9 @@
-
+body {
+  background-color: #111A22;
+  color: white;
+  overflow: hidden;
+  font-family: 'myFirstFont', Arial, Helvetica, sans-serif;
+}
 .container {
   display: grid;
   /* grid-template-columns: repeat(3, 1fr); */
@@ -62,3 +67,106 @@
   font-size: 40px;
 }
 /* ---------------------------------------------------------------- */
+.data-section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.left-panel {}
+.right-panel {}
+
+.middle-panel { 
+  /* border: 0.5px solid red; */
+  /* padding: 10px; */
+  margin: 0;
+}
+.middle-panel-top-section {
+  /* border: 0.5px solid yellow; */
+  text-align: center;
+}
+.middle-panel-bottom-section {
+  /* border: 0.5px solid yellow; */
+  text-align: center;
+}
+.test-grid-template {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+/* ---------------------------------------------------------------- */
+.info-panel-left {
+  /* border: 0.5px solid pink; */
+  text-align: left;
+  padding: 10px;
+  margin: 0;
+}
+.info-panel-middle-top {
+  /* border: 0.5px solid black; */
+  text-align: center;
+  /* padding: 10px; */
+  margin: 0;
+}
+.info-panel-middle-bottom-left {
+  /* border: 0.5px solid white; */
+  display: inline-block;
+  margin-right: 20px;
+  /* text-align: center; */
+}
+.info-panel-middle-bottom-right {
+  /* border: 0.5px solid white; */
+  display: inline-block;
+  /* margin-right: 20px; */
+  /* text-align: center; */
+}
+.info-panel-right {
+  /* border: 0.5px solid pink; */
+  text-align: right;
+  padding: 10px;
+  margin: 0;
+}
+/* ---------------------------------------------------------------- */
+.bar-section-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.brake-bar-container, .tps-bar-container {
+  color: #000!important;
+  /* border: 4px solid yellow; */
+  position: relative;
+  overflow: hidden;
+  height: 270px;
+  margin-top: 5px;
+  width: 48%;
+  box-sizing: border-box;
+}
+.brake-bar-container, .tps-bar-container {
+  border: 2px solid yellow;
+}
+
+.brake-bar, .tps-bar {
+  color:#fff !important;
+  height: 0%;
+  max-height: 400px !important;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+.brake-bar {
+  background-color: darkred !important;
+}
+.tps-bar {
+  background-color:#4CAF50 !important;
+}
+/* ---------------------------------------------------------------- */
+.data-title {
+  font-size: 40px;
+  margin: 0;
+}
+.data-reading {
+  font-size: 130px;
+  margin: 0;
+}
+.data-reading-gear {
+  font-size: 270px;
+  margin: 0;
+}
