--- a/client/index.css
+++ b/client/index.css
@@ -100,8 +100,8 @@ body {
 }
 .info-panel-middle-bottom-right {
   /* border: 0.5px solid white; */
-  display: inline-block; 
-  margin-right: 20px; 
+  display: inline-block;
+  /* margin-right: 20px; */
   /* text-align: center; */
 }
 .info-panel-right {
@@ -111,23 +111,38 @@ body {
   margin: 0;
 }
 /* ---------------------------------------------------------------- */
-.tpsBarContainer {
+.bar-section-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.brake-bar-container, .tps-bar-container {
   color: #000!important;
-  border: 4px solid yellow;
+  /* border: 4px solid yellow; */
   position: relative;
   overflow: hidden;
   height: 380px;
   margin-top: 5px;
-  /* width: 90%; */
-  }
-.tps-bar {
-  color:#fff!important;
-  background-color:#4CAF50!important;
+  width: 48%;
+  box-sizing: border-box;
+}
+.brake-bar-container, .tps-bar-container {
+  border: 4px solid yellow;
+}
+
+.brake-bar, .tps-bar {
+  color:#fff !important;
   height: 0%;
   max-height: 400px !important;
   width: 100%;
   position: absolute;
   bottom: 0;
+}
+.brake-bar {
+  background-color: darkred !important;
+}
+.tps-bar {
+  background-color:#4CAF50 !important;
 }
 /* ---------------------------------------------------------------- */
 .data-title {
