--- a/client/ShiftLightDisplay/index.css
+++ b/client/ShiftLightDisplay/index.css
@@ -10,7 +10,7 @@ body {
 }
 /* ---------------------------------------------------------------- */
 .shift-light-panel {
-  border: 1px solid yellow;
+  border-bottom: 1px solid yellow;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -28,12 +28,15 @@ body {
   border-bottom: 0.5px solid yellow;
   position: relative;
   margin-bottom: 3rem;
+  width: 60%;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 .rpm-bar {
   color: #fff!important;
   background-color: #4CAF50!important;
-  height: 130px; /* 160px pre thousands numbers */
-  width: 0;
+  height: 100px; /* 160px pre thousands numbers, then 130px beofre half size */
+  width: 0%;
   /* transition: width 0.3s ease-out, background-color 0.3s ease-out; */
 }
 /* ---------------------------------------------------------------- */
@@ -41,21 +44,23 @@ body {
   display: grid;
   grid-template-columns: repeat(9, 1fr);
   position: absolute;
-  min-width: 1905px;
-  width: 1905px;
+  min-width: 1142px; /* 1905px, then 952px for 25% */
+  width: 1142px; /* 1905px */
   padding-top: 150px;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 .rpm-bar-grid-item {
   border-right: .1px solid yellow;
   box-sizing: border-box;
-  height: 140px; /* 170px pre thousands numbers */
+  height: 100px; /* 170px pre thousands numbers, then 140px before half size */
   width: 100%;
   position: relative;
 }
 .rpm-bar-grid-item-zero {
   position: absolute;
   width: auto;
-  /* padding-top: 150px; */
+  margin-top: 150px; /* This to match `.rpm-bar-thousands-marks {padding-top}`  */
 }
 .rpm-bar-grid-item-p {
   position: absolute;
@@ -72,21 +77,27 @@ body {
   grid-template-columns: repeat(3, 1fr);
 }
 
-.left-panel {}
-.right-panel {}
-
-.middle-panel { 
-  /* border: 0.5px solid red; */
-  /* padding: 10px; */
-  margin: 0;
+.left-panel {
+  padding: 10px 20px 0px 10px;
+  /* padding: 0px 20px 0px 10px;
+  margin-top: -100px; */
+  text-align: left;
+}
+.right-panel {
+  padding: 10px 10px 0px 20px;
+  /* padding: 0px 10px 0px 20px;
+  margin-top: -100px; */
+  text-align: right;
+}
+.middle-panel {
+  /* padding-top: 10px; */
 }
 .middle-panel-top-section {
-  /* border: 0.5px solid yellow; */
   text-align: center;
 }
 .middle-panel-bottom-section {
-  /* border: 0.5px solid yellow; */
   text-align: center;
+  padding-top: 10px;
 }
 .test-grid-template {
   display: grid;
@@ -94,34 +105,26 @@ body {
 }
 /* ---------------------------------------------------------------- */
 .info-panel-left {
-  /* border: 0.5px solid pink; */
-  text-align: left;
-  padding: 10px;
-  margin: 0;
+  padding-bottom: 10px;
 }
+
 .info-panel-middle-top {
-  /* border: 0.5px solid black; */
   text-align: center;
-  /* padding: 10px; */
-  margin: 0;
+  padding-top: 10px;
 }
 .info-panel-middle-bottom-left {
-  /* border: 0.5px solid white; */
   display: inline-block;
   margin-right: 20px;
   /* text-align: center; */
 }
 .info-panel-middle-bottom-right {
-  /* border: 0.5px solid white; */
   display: inline-block;
   /* margin-right: 20px; */
   /* text-align: center; */
 }
+
 .info-panel-right {
-  /* border: 0.5px solid pink; */
-  text-align: right;
-  padding: 10px;
-  margin: 0;
+  padding-bottom: 10px;
 }
 /* ---------------------------------------------------------------- */
 .bar-section-container {
