--- a/client/ShiftLightDisplay/index.css
+++ b/client/ShiftLightDisplay/index.css
@@ -105,7 +105,7 @@ body {
 }
 /* ---------------------------------------------------------------- */
 .info-panel-datalogging {
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
   padding: 0px 0px 40px 0px;
   margin: -20px 280px 20px 0px;
   height: 68px;
@@ -117,6 +117,19 @@ body {
 .data-title-datalogging {
   font-size: 40px;
   margin: 0px;
+}
+
+.data-title-datalogging-btn {
+  background-color: transparent;
+  border: 0.5px solid yellow;
+  width: 100%;
+  height: 180%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-size: 20px;
+  margin-top: 20px;
 }
 /* ---------------------------------------------------------------- */
 .info-panel-left {
